--- a/minutes/minutes-2021-11-17.md
+++ b/minutes/minutes-2021-11-17.md
@@ -1,11 +1,11 @@
 # Network Inventory weekly call (November 17, 2021)
 
 ## Participants
-- [x] Aihua Guo
-- [x] Italo Busi
-- [x] Jeff Bouquier
-- [x] Sergio Belotti
-- [x] Yu Chaode
+- Aihua Guo
+- Italo Busi
+- Jeff Bouquier
+- Sergio Belotti
+- Yu Chaode
 
 ## Admin
 
