--- a/minutes/minutes-2022-03-09.md
+++ b/minutes/minutes-2022-03-09.md
@@ -55,6 +55,8 @@ The slides have been reviewed and updated during the call
 
 > - [ ] Sergio: check with Andrea how we can reference the TMF document
 
+Not discussed
+
 Chaode has presented some JSON examples using the CU proposal and using the current model
 
 The CU proposal looks easier to understand
