--- a/minutes/minutes-2022-05-18.md
+++ b/minutes/minutes-2022-05-18.md
@@ -1,19 +1,11 @@
 # Network Inventory weekly call (May 18, 2021)
 
 ## Participants
-- [ ] Aihua Guo
-- [ ] Anton Snitser
-- [ ] Fabio Peruzzini
-- [ ] Haomian Zheng
-- [x] Italo Busi
-- [x] Jeff Bouquier
-- [ ] Oscar González de Dios
-- [ ] Paolo Volpato
-- [x] Sergio Belotti
-- [ ] Victor Lopez
-- [x] Yu Chaode
-- [x] Zhang Chenfang
-- [ ] Zheng Yanlei
+- Italo Busi
+- Jeff Bouquier
+- Sergio Belotti
+- Yu Chaode
+- Zhang Chenfang
 
 ## Admin
 
@@ -60,12 +52,12 @@ Still waiting for replies
 
 We can start listing some equipment configuration examples and later on qualify them as generic or technology-specific
 
-- [ ] Jeff/Italo: provide the description of some examples (taking Jeff's slides as initial input)
+- [ ] Jeff/Italo: provide the description of some examples (taking Jeff's slides as initial input): issue #40
 
 Question about whether to define component-specific attributes within the same module or in different modules
 
 Agreement to start defining component-specific attributes within one module and see later on if there is a need to split into multiple modules
 
-The component-specif attributes can be grouped within a container with a when statement and, eventually, a choice statement
+The component-specific attributes can be grouped within a container with a when statement and, eventually, a choice statement
 
-- [ ] Chaode: start reviewing the common attributes defined in RFC 8348 and see which ones are applicable to our model
+- [ ] Chaode: start reviewing the common attributes defined in RFC 8348 and see which ones are applicable to our model (issue #17)
