--- a/minutes/minutes-2022-05-25.md
+++ b/minutes/minutes-2022-05-25.md
@@ -22,8 +22,6 @@
 
 Review minutes of May 18, 2022 call: https://github.com/italobusi/ietf-network-inventory/blob/main/minutes/minutes-2022-05-18.md
 
-Jeff: confirmation from the operations that most of the queries are on NE-based components where the CU model and the hierarchical models have no big difference in performances
-
 ### Closed Issues
 
 None
@@ -34,6 +32,12 @@ None
 - June 8th at 3pm CEST / 9am NA EDT / 9pm CST
 
 ## Discussion
+
+#### Integration efficiency issue (issue #32)
+
+Jeff: confirmation from the operations that most of the queries are on NE-based components where the CU model and the hierarchical models have no big difference in performances
+
+Agreement confirmed to keep working to enhance the current hierarchical model and park this issue for the time being. We can re-structure the model in future if needed
 
 ### Applicable attributes in RFC8348 (issue #17)
 
