--- a/minutes/minutes-2022-05-25.md
+++ b/minutes/minutes-2022-05-25.md
@@ -2,19 +2,13 @@
 
 ## Participants
 
-- [x] Aihua Guo
-- [ ] Anton Snitser
-- [ ] Fabio Peruzzini
-- [ ] Haomian Zheng
-- [x] Italo Busi
-- [x] Jeff Bouquier
-- [ ] Oscar González de Dios
-- [x] Paolo Volpato
-- [x] Sergio Belotti
-- [ ] Victor Lopez
-- [x] Yu Chaode
-- [x] Zhang Chenfang
-- [ ] Zheng Yanlei
+- Aihua Guo
+- Italo Busi
+- Jeff Bouquier
+- Paolo Volpato
+- Sergio Belotti
+- Yu Chaode
+- Zhang Chenfang
 
 ## Admin
 
@@ -58,17 +52,3 @@ Agreements:
 - [ ] Yuchade: investigate if there is a need to provide UUID-based location/position information (issue #41)
 
 The review of the table will continue offline and at the next meeting.
-
----
-
-### Equipment configuration examples (issue #40)
-
-> - [x] Jeff/Italo: provide the description of some examples (taking Jeff's slides as initial input)
-
-- [ ] Jeff/Fabio/Italo: provide the description of some examples (taking Jeff's slides as initial input)
-
-### Port modelling (supporting also MPO cables)
-
-### WG for this draft (issue #38)
-
-> - [ ] Italo/Haomian: solit Rob and CCAMP chairs/ADs for feedbacks and propose, if no other opinions, to progress the work in CCAMP WG keeping Netmod WG and OPSAWG informed
