--- a/minutes/minutes-2022-06-22.md
+++ b/minutes/minutes-2022-06-22.md
@@ -20,7 +20,13 @@ None
 
 ## Discussion
 
-Chaode presented some attributes not considered in RFC8348 for the equipment-room, rack, chassis, (sub-) slot , NE, board, port etc. We reviewed them one by one. Perhaps some of them are too detailed. Would be good to have the inputs from other Vendors like Nokia and Cisco to be able to cross-check if some attributes are missing according to these other Vendors.
+### Missing attributes from RFC8348 (issue #18)
+
+Chaode presented some attributes not considered in RFC8348 for the equipment-room, rack, chassis, (sub-) slot , NE, board, port etc:
+
+[Attributes——0621.xlsx](https://github.com/italobusi/ietf-network-inventory/files/9041401/Attributes.0621.xlsx)
+
+The attributes have been reviewed one by one. Perhaps some of them are too detailed. Would be good to have the inputs from other Vendors like Nokia and Cisco to be able to cross-check if some attributes are missing according to these other Vendors.
 
 Chaode then presented a proposal to define which attributes should be RW or RO. Aihua mentioned that, in principle, everything in the HW network inventory data model should be Read-Only.
 
