--- a/minutes/minutes-2022-08-04.md
+++ b/minutes/minutes-2022-08-04.md
@@ -31,6 +31,8 @@ The only pending comments (to be discussed in a future call) are:
 - how to improve the last sentence in section 2.2
 - what to do with section 2.2 since the scalability issues are outside the scope of this draft.
 
+- [ ] **Chaode** : update the draft based on the comments resolutions agreed on 2022-08-04
+
 ### Plan for next steps
 
 Considering the holiday period, weekly calls will restart from September 7 at 3pm CEST (9am NA EDT / 9pm CST)
