Updated minutes of Sept 7 and 14
Minor editorial updates to the minutes from the call on September 7 and 14, 2022

--- a/minutes/minutes-2022-09-07.md
+++ b/minutes/minutes-2022-09-07.md
@@ -42,4 +42,4 @@ Jeff: we stopped attributes discussion before IETF meeting. And since Chaode has
 
 ### Review the email for working group adoption request
 
-Chaode: will sent out the email to all the co-authors to get more comments.
+- [ ] Chaode: sent out the email to all the co-authors to get more comments.
