--- a/minutes/minutes-2022-09-14.md
+++ b/minutes/minutes-2022-09-14.md
@@ -62,13 +62,9 @@ Afterwards, the PR #49 can be opened for review: Italo and Aihua will review the
 
 The issue can be closed after a feature to make the reporting of the equipment-rooms optional needs to be defined
 
-- [ ] Italo/Aihua: propose YANG model updates to make the reporting of the equipment rooms optional:
-
-https://github.com/italobusi/ietf-network-inventory/issues/8#issuecomment-942252565
+- [ ] Italo/Aihua: propose YANG model updates to make the reporting of the equipment rooms optional: https://github.com/italobusi/ietf-network-inventory/issues/8#issuecomment-942252565
 
 ### Missing attributes from RFC8348 (issue #18)
-
-- [ ] Chaode: upload the xls file
 
 Chenfang and Chaode has reviewed the missing attributes and provided a proposal: [Attribute_from_CU@2022-09-14.xlsx](https://github.com/italobusi/ietf-network-inventory/files/9567063/Attribute_from_CU%402022-09-14.xlsx).
 
