--- a/minutes/minutes-2022-09-21.md
+++ b/minutes/minutes-2022-09-21.md
@@ -29,6 +29,8 @@ Text proposal from Jeff provided on github: https://github.com/italobusi/ietf-ne
 
 ### Missing attributes from RFC8348 (issue #18)
 
+Reviewed table from Chaode: [Attributes.xlsx](https://github.com/italobusi/ietf-network-inventory/files/9745442/Attributes.xlsx)
+
 Jeff: The attributes from China Unicom are too detailed. I suggest to discuss the attributes table sent from Chaode before to discuss whether the attributes from RFC8348 are applicable for NE and components.
 
 To be further discussed in the next calls
