--- a/minutes/minutes-2022-11-16.md
+++ b/minutes/minutes-2022-11-16.md
@@ -68,3 +68,7 @@ The discussion will continue next week.
 ### Model traversal between inventory and topology (issue #31)
 
 > Agreed that issue #31 is duplicated with #33: issue #31 has been closed and the comment in #31 referenced within #33
+
+## Meeting Material 
+
+[Meeting Material_11.16.pptx](https://github.com/italobusi/ietf-network-inventory/files/10074036/Meeting.Material_11.16.pptx)
