--- a/minutes/minutes-2023-01-18.md
+++ b/minutes/minutes-2023-01-18.md
@@ -80,7 +80,7 @@ See PR #66
 
 See: https://github.com/italobusi/ietf-network-inventory/issues/58#issuecomment-1380280374
 
-### Addressing Tom Petch's comments during WG adoption (PR #66)
+### Addressing comments during WG adoption (PR #66)
 
 Chaode presented a proposal to update the YANG model to address issues #61, #63 and some of the comments from Tom (issue #58)
 
