--- a/minutes/minutes-2023-02-08.md
+++ b/minutes/minutes-2023-02-08.md
@@ -24,3 +24,5 @@
 Reviewed slides from Chaode
 
 Agreed to clean-up the terminology in the draft and provide some description of the use cases in the scope of our draft
+
+The figure describing the different OSS systems can be simplified to focus only on the OSS systems which are relevant for the inventory use cases.
