--- a/minutes/minutes-2023-02-15.md
+++ b/minutes/minutes-2023-02-15.md
@@ -23,7 +23,7 @@
 
 ### Home WG for this draft ([issue #38](https://github.com/italobusi/ietf-network-inventory/issues/38))
 
-The issue has been closed because adopted as CCAMP WG document: https://datatracker.ietf.org/doc/html/[draft-ietf-ccamp-network-inventory-yang-00](https://datatracker.ietf.org/doc/html/draft-ietf-ccamp-network-inventory-yang-00)
+The issue has been closed because the draft has been already adopted as CCAMP WG document: [draft-ietf-ccamp-network-inventory-yang-00](https://datatracker.ietf.org/doc/html/draft-ietf-ccamp-network-inventory-yang-00)
 
 ### Need to find TMF reference for the equipment document SD2-20_EquipmentModel.pdf ([issue #40](https://github.com/italobusi/ietf-network-inventory/issues/40))
 
