--- a/minutes/minutes-2023-02-15.md
+++ b/minutes/minutes-2023-02-15.md
@@ -33,7 +33,7 @@ The issue has been closed because duplicated with issue #55
 
 We confirm the list of component types as defined in RFC8348. If there is a need to define new component types, they can be defined in the next versions of the I-D
 
-The issue has been closed
+Therefore the issue has been closed
 
 ### Management of NEs with multiple racks (issue #7)
 
