--- a/minutes/minutes-2023-04-26.md
+++ b/minutes/minutes-2023-04-26.md
@@ -64,4 +64,4 @@ Italo: maybe it is better to decouple the splitting based on the type of NE to a
 
 Sergio: can we say that what is detectable can be subject of software updated?
 
-Maybe the difference could be between what is detectable by the software internal information and what can be detectable only through external information is available
+Maybe the difference could be between what is detectable by the software internal information and what can be detectable only through external information if available
