--- a/minutes/minutes-2023-05-03.md
+++ b/minutes/minutes-2023-05-03.md
@@ -35,7 +35,7 @@ Checked offline and agreement reached to move the weekly calls at 4pm CEST (10am
 
 ## TAPI Inventory (Nigel)
 
-Slides from Nigel:
+Slides from Nigel: [models-relationship-00.pptx](https://github.com/ietf-ccamp-wg/ietf-network-inventory/files/11419154/models-relationship-00.pptx)
 
 Clarified that a strand is a physical indivisible element which can be spliced or connected to other strands to form a physical span: see examples in slide 6
 
