--- a/minutes/minutes-2023-05-10.md
+++ b/minutes/minutes-2023-05-10.md
@@ -46,4 +46,4 @@ Slides reviewed and updated during the discussion: [multi-rack-NE-questions-02](
 
 The detailed changes to the model needs further discussion pending confirmation of the requirements to be addressed
 
-- [ ] **Fabio, Jeff, Oscar**: check if there are requirements to manage cases where the rack belongs to the NE and where the shelf does not belong to the NE
+- [ ] **Italo**: check with the operators if there are requirements to manage cases where the rack belongs to the NE and where the shelf does not belong to the NE
