--- a/minutes/minutes-2023-07-05.md
+++ b/minutes/minutes-2023-07-05.md
@@ -21,7 +21,7 @@ None
 
 ## Discussion
 
-### Updated text for IETF 117
+### Updated text for IETF 117 (PR #98)
 
 Review text proposal from Chaode to update the I-D text before IETF 117:
 - aligned the YANG tree snapshots with the YANG model changes in PR #67
@@ -36,6 +36,3 @@ More detailed text has to be provided to complete the specification of the compo
 
 - [ ] Chaode/Italo: add Nigel as contributor to the I-D
 
-- [ ] Chaode: updload the update text on github and open a PR for review
-
-- [ ] Italo/Jeff/Aihua: review the PR before friday July 7th EOB
