Added URL pointing to Alex presentation

--- a/minutes/minutes-2023-09-13.md
+++ b/minutes/minutes-2023-09-13.md
@@ -53,6 +53,8 @@ It was agreed to work offline before the interim meeting to investigate the poss
 
 ## Proposal for peer-mount (issue #102)
 
-Alex presented a proposal for Peer-Mount, which provides a capability to mount subtrees from remote datastores into a local datastore analogous to mounting remote directories in a distributed file system.  This enables providing federated datastores with a holistic network view without the need for redundant models and copies of the same data across different systems.  Such a capability could become of interest in the future should increasing amounts of management data need to be integrated with network inventory data, for example current state of inventoried elements, data about interfaces, etc.  
+Alex presented some slide to describe a proposal for Peer-Mount: [Peer-Mount + inventory.pdf](https://github.com/ietf-ccamp-wg/ietf-network-inventory/files/12601793/Peer-Mount.%2B.inventory.pdf)
+
+The Peer-Mount solution provides a capability to mount subtrees from remote datastores into a local datastore analogous to mounting remote directories in a distributed file system.  This enables providing federated datastores with a holistic network view without the need for redundant models and copies of the same data across different systems.  Such a capability could become of interest in the future should increasing amounts of management data need to be integrated with network inventory data, for example current state of inventoried elements, data about interfaces, etc.  
 
 The proposal was overall well-received, with several attendees contributing to the discussion, involving questions related to scalability, differences between peer-mount and schema-mount, instantiation vs modeling issues.  A 00 draft is in the works and Alex stated that the authors of Peer-Mount are looking for potential coauthors.  
